# EpicShelter

./: .gitignore  README.md  go.mod
engine/: .gitignore  README.md  pyproject.toml  test.parquet
engine/engine/: main.py
engine/engine/cli/: validate.py  version.py
engine/engine/config/: config.py
engine/engine/connectors/: connector.py  singlestore.py
engine/engine/services/: job.py  parquet.py  s3.py  validate.py
engine/exports/0c316925-f76e-474c-8610-19a70b641e13/: simple_0.parquet
engine/exports/30ebf5bc-b27a-4966-b3d9-806bf5f130bf/: simple_0.parquet
engine/exports/4d37dcd1-bbcb-4114-ad32-5e20c9688483/: simple_0.parquet
engine/exports/9b8dd8d1-df12-41fb-bb9e-fb1ec8b1e2ee/: simple_0.parquet
engine/exports/c7df19a7-6b9c-42f1-8b52-b42fdaab9074/: simple_0.parquet
engine/exports/e2542a05-2f25-441e-b705-de5e43c9971d/: simple_0.parquet
engine/exports/f322687d-a2fd-4aec-bdf2-075e2d5d9874/: simple_0.parquet
