[project]
name = "engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Bharat Kathi",email = "bharat1031@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)"
]

[tool.poetry.scripts]
engine = "engine.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
