[project]
name = "engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Bharat Kathi",email = "bharat1031@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "pyarrow (>=18.1.0,<19.0.0)",
    "boto3 (>=1.35.98,<2.0.0)",
    "faker (>=33.3.1,<34.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry.scripts]
engine = "engine.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
